# McLaren_Racing_Challenge

./: .gitignore  .pre-commit-config.yaml  README.md  checkBookings.py  check_bookings.py  check_bookings2.py  check_bookings_oop.py  check_bookings_test.py  check_bookings_tests.py  new_proto.py  oop.py  proto.py  pyproject.toml  test_checkbookings.py
.github/workflows/: test.yml
data/: all_conflicts.csv  conflicts_data1.csv  conflicts_data2.csv  room_booking_data.csv  testdata2.csv  testdata3.csv  testdata4.csv  testdata5.csv  testdata6.csv  time_data.csv
mclaren_racing_challenge/: check_bookings.py
tests/: test_check_bookings.py
tests/test_data/: conflicts_data3.csv  no_conflicts.csv
